@@ -2,6 +2,10 @@ apply from: "${rootProject.projectDir}/gradle/include/jvm-project.gradle"
 
 apply plugin: 'jacoco'
 
+configurations {
+    fetchInstrumentationJar
+}
+
 compileJava {
     options.compilerArgs << '-XDignore.symbol.file'
 }
@@ -32,10 +36,10 @@ test {
     useJUnit()
     // set heap size for the test JVM(s)
     minHeapSize = "128m"
-    maxHeapSize = "16384m"
+    maxHeapSize = "3072m"
 
     // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
+    jvmArgs '-XX:MaxHeapSize=3072m'
 
     finalizedBy jacocoTestReport
 }
@@ -50,11 +54,8 @@ dependencies {
     api project(":utbot-framework")
     api project(":utbot-analytics")
 
-    api project(":utbot-instrumentation")
-
     implementation "com.github.UnitTestBot:soot:${soot_commit_hash}"
     implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.2'
-    implementation group: 'commons-io', name: 'commons-io', version: commons_io_version
     implementation group: 'io.github.microutils', name: 'kotlin-logging', version: kotlin_logging_version
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.6.2'
     testImplementation fileTree(dir: 'src/main/resources/projects/', include: '*/*.jar')
@@ -64,6 +65,13 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.2.0'
     testImplementation 'junit:junit:4.13.2'
+    fetchInstrumentationJar project(path: ':utbot-instrumentation', configuration:'instrumentationArchive')
+}
+
+processResources {
+    from(configurations.fetchInstrumentationJar) {
+        into "lib"
+    }
 }
 
 jar { dependsOn classes
